# market

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: branch-protection.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
docs/: api.md  architecture.md  architecture.puml  branch-strategy.md  database.md  patterns.md  transaction_flow.puml
include/accounting/: BalanceSheet.h  CashFlowStatement.h  EntryType.h  IReport.h  IncomeStatement.h  Journal.h  JournalEntry.h  Ledger.h  TrialBalance.h
include/contracts/: Contract.h
include/core/: Account.h
include/database/: AccountRepository.h  Database.h  Repository.h
include/financial/: Asset.h  AssetStrategy.h  Liability.h  LiabilityStrategy.h  Transaction.h  Wallet.h
include/utils/: Decimal.h  IDGenerator.h
src/: main.cpp
src/accounting/: BalanceSheet.cpp  CashFlowStatement.cpp  IncomeStatement.cpp  Journal.cpp  JournalEntry.cpp  Ledger.cpp  TrialBalance.cpp
src/contracts/: Contract.cpp
src/core/: Account.cpp
src/database/: Database.cpp
src/financial/: Asset.cpp  AssetStrategy.cpp  Liability.cpp  LiabilityStrategy.cpp  Transaction.cpp  Wallet.cpp
src/utils/: Decimal.cpp  IDGenerator.cpp
